@@ -27,8 +27,10 @@
 #include <stdint.h>	/* uint_leastXX_t */
 #include <wchar.h>	/* mbstate_t */
 
-#if !defined(__cplusplus) || !defined(__GNUC__) || \
-   (__GNUC__ < 4 || (__GNUC__ == 4 && __GNUC_MINOR__ < 4))
+/* Remember that g++ >= 4.4 defines these types only in c++0x mode */
+#if !(defined(__cplusplus) && defined(__GXX_EXPERIMENTAL_CXX0X__)) ||	\
+    !defined(__GNUC__) ||						\
+    (__GNUC__ < 4 || (__GNUC__ == 4 && __GNUC_MINOR__ < 4))
 typedef uint_least16_t char16_t;
 typedef uint_least32_t char32_t;
 #endif
